# kdepim2google

./: .gitattributes  .gitignore  AUTHORS.txt  CHANGELOG.txt  CMakeLists.txt  INSTALL.txt  README.md  RELEASES.txt  RELEASE_PROCEDURE.sh  RELEASE_PROCEDURE.txt  cmake_uninstall.cmake  distribution.sh  kaddressbook-search  uninstall.sh
i18n/: kdepim2google_es.ts
src/: CMakeLists.txt  Contact.cpp  Contact.h  Mem.cpp  Mem.h  SetContacts.cpp  SetContacts.h  kaddressbook2cvs.cpp  kaddressbook2cvsWorker.cpp  kaddressbook2cvsWorker.h  kaddressbook2ics.cpp  kaddressbook2icsWorker.cpp  kaddressbook2icsWorker.h
